# secfi-assignment

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
postman/: Users Microservice.postman_collection.json
project/project/: settings.py  urls.py
service/app/: forms.py  models.py  schema.py  urls.py  views.py
service/app/migrations/: 0001_initial.py  0002_auto_20210618_1616.py
service/service/: settings.py  urls.py
