[tool.poetry]
name = "secfi-assignment"
version = "0.1.0"
description = ""
authors = ["George Zografos <george.p.zografos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
